[gd_scene load_steps=4 format=3 uid="uid://cxkfqwjmvkrx1"]

[ext_resource type="Texture2D" uid="uid://dhywglf6lyu38" path="res://assets/textures/hole/hole.svg" id="1_v8osy"]
[ext_resource type="Script" path="res://maps/objects/hole.gd" id="1_x8u7e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_10hqv"]
radius = 32.0

[node name="Hole" type="Node2D"]
script = ExtResource("1_x8u7e")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("1_v8osy")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_10hqv")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.90735e-06, 1.90735e-06)
scale = Vector2(3.2, 3.2)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
